--- a/movil/angular.json
+++ b/movil/angular.json
@@ -30,7 +30,7 @@
                 "output": "./svg"
               }
             ],
-            "styles": ["src/theme/variables.scss", "src/global.scss"],
+            "styles": ["src/theme/variables.scss","node_modules/bootstrap/dist/css/bootstrap.min.css", "src/global.scss"],
             "scripts": [],
             "aot": false,
             "vendorChunk": true,
